# ida

./: .gitignore  1991.csv  Cargo.toml  Ida.sln  LICENSE  Package.resolved  Package.swift  README.md  README.rst  countries.json  country.go  cross.sh  go.mod  go.sum  ida  main.go  package-lock.json  package.json  parser.go  pyproject.toml  setup.py  shard.yml  tsconfig.json
Ida/: Console.fs  ContentView.swift  Contest.fs  Ida.fsproj  IdaApp.swift  MainAppView.swift  ParsedVotesView.swift  Parser.fs  Program.fs
Ida.xcodeproj/: project.pbxproj
Ida.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Ida.xcodeproj/xcuserdata/aditya.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/ida/: contest.swift  loader.swift  main.swift  parser.swift
Tests/: LinuxMain.swift
Tests/idaTests/: XCTestManifests.swift  idaTests.swift
archive/: LICENSE  README.md
archive/resources/: sample.json
contest/: contest.go  country.go  entry.go  loader.go
country/: country.go
ida/: contest.py  ida.py  parser.py
ida/contest/: country.py  entry.py
ida/tests/: test_contest.py
pkg/app/: contest_details.go
pkg/contest/: contest.go
pkg/parser/: parser.go
resources/: FSC 203.xlsx  countries.json  countries.tsv  entries.txt  output.json  output.xlsx  sample.json
results/: results.go
spec/: ida_spec.cr  spec_helper.cr
src/: commands.ts  contest.ts  ida.cr  index.ts  main.rs  parser.ts  spreadsheet.ts  utilities.ts
src/ida/: __main__.py  app.py  contest.cr  parser.cr
src/ida.dist-info/: METADATA
voting/: parser.go  vote.go
